--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,5 +18,30 @@ img {
     box-shadow: 0 0 30px gray;
 }
 p {
+    padding: 0;
+}
+main {
+    max-width: 850px;
+}
+main img {
+    width: 150px;
+    height: auto;
+}
+aside {
+    width: 50rem;
+    margin: 1rem;
+    border: 1px solid rgb(000/0.2);
     padding: 10px;
+    background-color: gainsboro;
+    color: black;
+    
+}
+aside img {
+    width: 200px;
+    height: auto;
+}
+footer {
+    margin-top: 2rem;
+    border-top: 1px solid black;
+    text-align: center;
 }
