--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,9 @@ main {
 main img {
     width: 150px;
     height: auto;
+    border: 1px solid rgb(000/0.2);
+    padding: 1px;
+    box-shadow: 10px;
 }
 aside {
     width: 50rem;
