--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,18 +26,17 @@ main {
 main img {
     width: 150px;
     height: auto;
-    border: 1px solid rgb(000/0.2);
+    border: 1px solid black;
     padding: 1px;
-    box-shadow: 10px;
+    box-shadow: 0 0 30px gray;
 }
 aside {
     width: 50rem;
-    margin: 1rem;
-    border: 1px solid rgb(000/0.2);
+    margin: 0;
+    border: 1px solid black;
     padding: 10px;
     background-color: gainsboro;
     color: black;
-    
 }
 aside img {
     width: 200px;
