--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,14 +6,21 @@
     --img: width: 100%; height: auto;
 
 }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 nav {
     background-color: darkblue;
     padding: var(--padding);
+    text-align: left;
 }
 nav a {
     color: white;
     display: block;
     padding: 20px;
+    display: inline;
 }
 h1 {
     color: darkblue
@@ -37,21 +44,36 @@ main img {
     border: var(--border);
     padding: 1px;
     box-shadow: 0 0 30px gray;
+    float: right;
 }
 aside {
-    width: 50rem;
-    margin: 0;
-    border: var(--border);
-    padding: var(--padding);
-    background-color: gainsboro;
-    color: black;
+    width: 300px;
+    margin: 10px 0;
+    text-align: left;
+    position: relative;
 }
 aside img {
-    width: 200px;
+    width: 100%;
     height: var(--height);
+    display: block;
+}
+aside h2 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 3rem;
+    color: #000000;
 }
 footer {
     margin-top: 2rem;
     border-top: var(--border);
     text-align: center;
+}
+/* Class Selectors */
+.box {
+    border: 1px solid rgb(0 0 0 / 10%);
+    margin: 1rem;
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000000;
 }
