--- a/week04/styles/flexbox.css
+++ b/week04/styles/flexbox.css
@@ -7,7 +7,10 @@ body {
     border: 3px dashed darkcyan;
     background-color: lightyellow;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: stretch;
+    /* the above 4 options are changing the gray boxes. */
 }
 
 .flex-item {
