--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,25 +6,30 @@
     --img: width: 100%; height: auto;
 
 }
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
 nav {
     background-color: darkblue;
     padding: var(--padding);
     text-align: left;
 }
+
 nav a {
     color: white;
     display: block;
     padding: 20px;
     display: inline;
 }
+
 h1 {
     color: darkblue
 }
+
 img {
     width: 150px;
     height: var(--height);
@@ -32,12 +37,47 @@ img {
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
+
 p {
-    padding: 0;
+    padding: 1rem;
 }
+
+a{
+    color: #00f;
+}
+
+header, .grid, footer{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+nav {
+  background-color: steelblue;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+nav a {
+  display: block;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #fff;
+}
+
 main {
     max-width: 850px;
+    grid-column: 2/3;
+    margin: 1rem 0;
 }
+
+h1{
+    border-bottom: 1px solid #333;
+}
+
 main img {
     width: 150px;
     height: var(--height);
@@ -45,18 +85,22 @@ main img {
     padding: 1px;
     box-shadow: 0 0 30px gray;
     float: right;
+    margin: 1rem 0 1rem 1rem;
 }
+
 aside {
-    width: 300px;
-    margin: 10px 0;
-    text-align: left;
+    max-width: 30rem;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
+
 aside img {
     width: 100%;
     height: var(--height);
     display: block;
 }
+
 aside h2 {
     position: absolute;
     left: 50%;
@@ -64,16 +108,32 @@ aside h2 {
     top: 3rem;
     color: #000000;
 }
+
 footer {
-    margin-top: 2rem;
+    margin: 1rem auto;
     border-top: var(--border);
     text-align: center;
+    background-color: #3e3e3e;
+    color: #fff;
 }
+
+ul{
+    list-style: none;
+    padding: 1rem;
+}
+
 /* Class Selectors */
 .box {
     border: 1px solid rgb(0 0 0 / 10%);
-    margin: 1rem;
     padding: 1rem;
     background-color: #ddd;
     color: #000000;
+}
+
+.grid{
+    display: grid;
+    align-items: center;
+    gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
