--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,11 +6,13 @@
     --heading-font: 'Bebas Neue', 'Impact', 'Arial Black', Arial, sands-serif;
     --body-font: 'Montserrat','Helvetica Neue', Helvetica, Arial, sands-serif;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: var(--body-font);
     color: var(--accent1-color);
@@ -21,26 +23,59 @@ header, main, footer {
     width: 100%;
     padding: 1rem;
 }
+
+header{
+  display: grid;
+  grid-template-columns: 2fr 4fr;
+  align-items: center;
+  justify-content: center;
+  max-width: 1000px;
+}
+
+.links{
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  
+}
+
+.links a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--accent1-color);
+  padding: 20px;
+  text-decoration: none;
+  text-align: center;
+  border: 1px solid #000;
+  width: 100%;
+  height: 50px;
+}
+
 h1, h2 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
+
 nav, p, section, article {
     margin: 16px;
     padding: 8px;
 }
+
 section h2{
     background-color: var(--accent1-color);
     color: var(--secondary-color);
     width: 100%;
     padding: .5rem;
 }
-.socialmedia a {
-    text-decoration: none;
-}
+
 .hero {
   position: relative;
 }
+
 .hero h1 {
   position: absolute;
   top: 20px;
@@ -50,6 +85,7 @@ section h2{
   opacity: 0.8;
   color: var(--secondary-color);
 }
+
 .hero article{
   position: absolute;
   width: 100%;
@@ -58,20 +94,66 @@ section h2{
   margin-left: auto;
   opacity: 0.8;
   color: var(--primary-color);
-  /* display: block; */
 }
+
 .hero article img{
   float: right;
   width: 150px;
   margin-left: 10px;
   text-align: left;
 }
+
 .hero img {
   display: block;
   width: 100%;
   height: auto;
 }
+
+.socialmedia a {
+    text-decoration: none;
+    margin: 2px;
+}
+
 footer .socialmedia img{
     width: 30px;
     height: auto;
+}
+.foot{
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.adventure {
+    text-align: center;
+    padding: 2rem 0;
+}
+
+.fig {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    margin-top: 1.5rem;
+}
+
+.fig figure {
+    width: 150px;
+    text-align: center;
+}
+
+.fig img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    display: block;
+}
+
+.fig figcaption {
+    margin-top: 0.5rem;
+    font-size: 0.9rem;
+    color: #444;
 }
