--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -47,7 +47,7 @@ header {
 .links a {
   display: flex;
   align-items: center;
-  color: var(--accent1-color);
+  color: black;
   padding: 20px;
   text-decoration: none;
   text-align: center;
@@ -262,7 +262,7 @@ form button {
     padding: 12px 20px;
     background-color: var(--accent2-color);
     border: none;
-    color: var(--secondary-color);
+    color: var(--accent1-color);
 }
 
 form button:hover {
