--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,6 +3,7 @@
     --secondary-color: #fff;
     --accent1-color: #0d3b66;
     --accent2-color: #ff6b35;
+    --accent3-color: #F2C499;
     --heading-font: 'Bebas Neue', 'Impact', 'Arial Black', Arial, sands-serif;
     --body-font: 'Montserrat','Helvetica Neue', Helvetica, Arial, sands-serif;
 }
@@ -45,14 +46,13 @@ header {
 .links a {
   display: flex;
   align-items: center;
-  color: black;
+  color: var(--accent3-color);
   padding: 20px;
   text-decoration: none;
   text-align: center;
-  border: 1px solid #000;
   width: 100%;
   height: 50px;
-  background-color: #fff;
+  
 }
 
 h1, h2 {
@@ -125,7 +125,7 @@ footer .socialmedia img{
   align-items: center;
   width: 100%;
   height: 100%;
-  color: #fff;
+  color: var(--accent3-color);
   background-color: var(--accent1-color);
 }
 
