--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,9 +4,8 @@
     --accent1-color: #0d3b66;
     --accent2-color: #ff6b35;
     --accent3-color: #E0B583;
-    --accent4-color: #cda577;
-    --heading-font: 'Bebas Neue', 'Impact', 'Arial Black', Arial, sans-serif;
-    --body-font: 'Montserrat','Helvetica Neue', Helvetica, Arial, sans-serif;
+    --heading-font: 'Bebas Neue', 'Impact', 'Arial Black', Arial, sands-serif;
+    --body-font: 'Montserrat','Helvetica Neue', Helvetica, Arial, sands-serif;
 }
 
 * {
@@ -37,7 +36,7 @@ header {
 }
 
 .links a {
-    color: var(--accent4-color);
+    color: var(--accent3-color);
     text-decoration: none;
     padding: 1em;
     font-size: large;
@@ -173,21 +172,21 @@ figcaption {
 }
 
 .hero h3 {
-    color: var(--accent4-color);
+    color: var(--accent3-color);
     font-size: larger;
 }
 
-.hero article {
+.hero article{
     position: absolute;
     width: 100%;
     top: 60px;
     background-color: var(--accent3-color);
     margin-left: auto;
     opacity: 0.9;
-    color: var(--primary-color);
+    color: var(--accent1-color);
 }
 
-.hero article img {
+.hero article img{
     float: right;
     width: 150px;
     margin-left: 10px;
@@ -215,7 +214,7 @@ figcaption {
     margin: 2px;
 }
 
-.socialmedia img {
+.socialmedia img{
     width: 30px;
     height: auto;
 }
@@ -227,7 +226,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 100%;
-    color: var(--accent4-color);
+    color: var(--accent3-color);
     background-color: var(--accent1-color);
 }
 
@@ -340,11 +339,11 @@ form button {
     margin: 10px;
     background-color: var(--accent2-color);
     border: none;
-    color: var(--secondary-color);
+    color: var(--primary-color)
 }
 
 form button:hover {
-    background-color: var(--accent1-color);
+    background-color: var(--primary-color);
     color: var(--accent2-color);
 }
 
@@ -353,14 +352,14 @@ form button:hover {
     justify-items: center;
     align-items: center;
     text-align: center;
-    color: var(--accent4-color);
+    color: var(--accent3-color);
     background-color: var(--accent1-color);
     width: 500px;
     margin: 0 auto;
     margin-top: 20px;
 }
 
-.action-call h2 {
+.action-call h2{
     text-align: center;
     padding: 5px; 
 }
@@ -372,7 +371,7 @@ form button:hover {
 }
 
 .action-call button:hover {
-    background-color: var(--accent1-color);
+    background-color: var(--primary-color);
     color: var(--accent2-color);
 }
 
@@ -380,7 +379,7 @@ form button:hover {
     padding: 5px 50px;
     font-size: large;
     background-color: var(--accent2-color);
-    color: var(--secondary-color);
+    color: var(--primary-color)   
 }
 
 .grid {
@@ -402,12 +401,12 @@ form button:hover {
     padding: 5px 50px;
     font-size: medium;
     background-color: var(--accent2-color);
-    color: var(--secondary-color);
+    color: var(--primary-color)
 }
 
 .grid button:hover {
     border: none;
-    background-color: var(--accent1-color);
+    background-color: var(--primary-color);
     color: var(--accent2-color);
 }
 
@@ -420,7 +419,7 @@ form button:hover {
 
 .newsletter h1 {
     font-size: x-large;
-    color: var(--accent4-color);
+    color: var(--accent3-color);
     background-color: var(--accent1-color);
     padding: 10px 20px;
     font-family: var(--body-font);
@@ -491,7 +490,7 @@ table {
 
 th {
     background-color: var(--accent1-color);
-    color: var(--accent4-color);
+    color: var(--accent3-color);
     font-weight: bold;
     padding: 0.5rem 1rem;
     text-align: center;
@@ -500,6 +499,7 @@ th {
 td {
     padding: 0.5rem 1rem;
     text-align: center;
+    
 }
 
 .color {
@@ -523,7 +523,7 @@ td {
     background-color: var(--accent1-color);
     padding: 30px 40px;
     max-width: 350px;
-    color: var(--accent4-color);
+    color: var(--accent3-color);
 }
 
 .logo {
